pkg/grammars/sqlmeshgrammar/sqlmesh_parser.go
// Code generated from SQLMesh.g4 by ANTLR 4.13.2. DO NOT EDIT.

package grammar // SQLMesh
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SQLMesh struct {
	*antlr.BaseParser
}

var SQLMeshParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlmeshParserInit() {
	staticData := &SQLMeshParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "'MODEL'", "'AUDIT'", "'INCREMENTAL_BY_TIME_RANGE'",
		"'INCREMENTAL_BY_UNIQUE_KEY'", "'INCREMENTAL_BY_PARTITION'", "'SCD_TYPE_2'",
		"'EXTERNAL'", "'EMBEDDED'", "'FULL'", "'VIEW'", "'SEED'", "", "", "'column_descriptions'",
		"'physical_properties'", "'on_virtual_update'", "'invalidate_hard_deletes'",
		"'disable_restatement'", "'pre_statements'", "'post_statements'", "'partitioned_by'",
		"'clustered_by'", "'storage_format'", "'table_format'", "'csv_settings'",
		"'unique_key'", "'time_column'", "'description'", "'retention'", "'dialect'",
		"'columns'", "'audits'", "'grain'", "'owner'", "'stamp'", "'tags'",
		"'cron'", "'name'", "'kind'", "'path'", "'query'", "'('", "')'", "'['",
		"']'", "'{'", "'}'", "','", "'='", "':'", "'.'", "", "", "", "", "",
		"", "", "' '",
	}
	staticData.SymbolicNames = []string{
		"", "BLOCK_COMMENT", "LINE_COMMENT", "WS", "MODEL", "AUDIT", "KIND_INCREMENTAL_BY_TIME_RANGE",
		"KIND_INCREMENTAL_BY_UNIQUE_KEY", "KIND_INCREMENTAL_BY_PARTITION", "KIND_SCD_TYPE_2",
		"KIND_EXTERNAL", "KIND_EMBEDDED", "KIND_FULL", "KIND_VIEW", "KIND_SEED",
		"TRUE", "FALSE", "PROP_COLUMN_DESCRIPTIONS", "PROP_PHYSICAL_PROPERTIES",
		"PROP_ON_VIRTUAL_UPDATE", "PROP_INVALIDATE_HARD_DELETES", "PROP_DISABLE_RESTATEMENT",
		"PROP_PRE_STATEMENTS", "PROP_POST_STATEMENTS", "PROP_PARTITIONED_BY",
		"PROP_CLUSTERED_BY", "PROP_STORAGE_FORMAT", "PROP_TABLE_FORMAT", "PROP_CSV_SETTINGS",
		"PROP_UNIQUE_KEY", "PROP_TIME_COLUMN", "PROP_DESCRIPTION", "PROP_RETENTION",
		"PROP_DIALECT", "PROP_COLUMNS", "PROP_AUDITS", "PROP_GRAIN", "PROP_OWNER",
		"PROP_STAMP", "PROP_TAGS", "PROP_CRON", "PROP_NAME", "PROP_KIND", "PROP_PATH",
		"PROP_QUERY", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE",
		"RBRACE", "COMMA", "EQUALS", "COLON", "DOT", "SEMI", "MACRO_BRACED",
		"MACRO_IDENT", "FLOAT_LITERAL", "INT_LITERAL", "STRING_LITERAL", "IDENTIFIER",
		"SQL_LINE", "SQL_BODY_SEMI",
	}
	staticData.RuleNames = []string{
		"sqlmeshFile", "topStatement", "modelDef", "modelProp", "kindValue",
		"auditDef", "auditProp", "auditArray", "auditEntry", "auditEntryProp",
		"propValue", "literal", "qualifiedIdent", "arrayValue", "dictValue",
		"dictEntry", "macroRef", "sqlBody",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SQLMeshInit initializes any static state used to implement SQLMesh. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSQLMesh(). You can call this function if you wish to initialize the static state ahead
// of time.
func SQLMeshInit() {
	staticData := &SQLMeshParserStaticData
	staticData.once.Do(sqlmeshParserInit)
}

// NewSQLMesh produces a new parser instance for the optional input antlr.TokenStream.
func NewSQLMesh(input antlr.TokenStream) *SQLMesh {
	SQLMeshInit()
	this := new(SQLMesh)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SQLMeshParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SQLMesh.g4"

	return this
}

// SQLMesh tokens.
const (
	SQLMeshEOF                            = antlr.TokenEOF
	SQLMeshBLOCK_COMMENT                  = 1
	SQLMeshLINE_COMMENT                   = 2
	SQLMeshWS                             = 3
	SQLMeshMODEL                          = 4
	SQLMeshAUDIT                          = 5
	SQLMeshKIND_INCREMENTAL_BY_TIME_RANGE = 6
	SQLMeshKIND_INCREMENTAL_BY_UNIQUE_KEY = 7
	SQLMeshKIND_INCREMENTAL_BY_PARTITION  = 8
	SQLMeshKIND_SCD_TYPE_2                = 9
	SQLMeshKIND_EXTERNAL                  = 10
	SQLMeshKIND_EMBEDDED                  = 11
	SQLMeshKIND_FULL                      = 12
	SQLMeshKIND_VIEW                      = 13
	SQLMeshKIND_SEED                      = 14
	SQLMeshTRUE                           = 15
	SQLMeshFALSE                          = 16
	SQLMeshPROP_COLUMN_DESCRIPTIONS       = 17
	SQLMeshPROP_PHYSICAL_PROPERTIES       = 18
	SQLMeshPROP_ON_VIRTUAL_UPDATE         = 19
	SQLMeshPROP_INVALIDATE_HARD_DELETES   = 20
	SQLMeshPROP_DISABLE_RESTATEMENT       = 21
	SQLMeshPROP_PRE_STATEMENTS            = 22
	SQLMeshPROP_POST_STATEMENTS           = 23
	SQLMeshPROP_PARTITIONED_BY            = 24
	SQLMeshPROP_CLUSTERED_BY              = 25
	SQLMeshPROP_STORAGE_FORMAT            = 26
	SQLMeshPROP_TABLE_FORMAT              = 27
	SQLMeshPROP_CSV_SETTINGS              = 28
	SQLMeshPROP_UNIQUE_KEY                = 29
	SQLMeshPROP_TIME_COLUMN               = 30
	SQLMeshPROP_DESCRIPTION               = 31
	SQLMeshPROP_RETENTION                 = 32
	SQLMeshPROP_DIALECT                   = 33
	SQLMeshPROP_COLUMNS                   = 34
	SQLMeshPROP_AUDITS                    = 35
	SQLMeshPROP_GRAIN                     = 36
	SQLMeshPROP_OWNER                     = 37
	SQLMeshPROP_STAMP                     = 38
	SQLMeshPROP_TAGS                      = 39
	SQLMeshPROP_CRON                      = 40
	SQLMeshPROP_NAME                      = 41
	SQLMeshPROP_KIND                      = 42
	SQLMeshPROP_PATH                      = 43
	SQLMeshPROP_QUERY                     = 44
	SQLMeshLPAREN                         = 45
	SQLMeshRPAREN                         = 46
	SQLMeshLBRACKET                       = 47
	SQLMeshRBRACKET                       = 48
	SQLMeshLBRACE                         = 49
	SQLMeshRBRACE                         = 50
	SQLMeshCOMMA                          = 51
	SQLMeshEQUALS                         = 52
	SQLMeshCOLON                          = 53
	SQLMeshDOT                            = 54
	SQLMeshSEMI                           = 55
	SQLMeshMACRO_BRACED                   = 56
	SQLMeshMACRO_IDENT                    = 57
	SQLMeshFLOAT_LITERAL                  = 58
	SQLMeshINT_LITERAL                    = 59
	SQLMeshSTRING_LITERAL                 = 60
	SQLMeshIDENTIFIER                     = 61
	SQLMeshSQL_LINE                       = 62
	SQLMeshSQL_BODY_SEMI                  = 63
)

// SQLMesh rules.
const (
	SQLMeshRULE_sqlmeshFile    = 0
	SQLMeshRULE_topStatement   = 1
	SQLMeshRULE_modelDef       = 2
	SQLMeshRULE_modelProp      = 3
	SQLMeshRULE_kindValue      = 4
	SQLMeshRULE_auditDef       = 5
	SQLMeshRULE_auditProp      = 6
	SQLMeshRULE_auditArray     = 7
	SQLMeshRULE_auditEntry     = 8
	SQLMeshRULE_auditEntryProp = 9
	SQLMeshRULE_propValue      = 10
	SQLMeshRULE_literal        = 11
	SQLMeshRULE_qualifiedIdent = 12
	SQLMeshRULE_arrayValue     = 13
	SQLMeshRULE_dictValue      = 14
	SQLMeshRULE_dictEntry      = 15
	SQLMeshRULE_macroRef       = 16
	SQLMeshRULE_sqlBody        = 17
)

// ISqlmeshFileContext is an interface to support dynamic dispatch.
type ISqlmeshFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllTopStatement() []ITopStatementContext
	TopStatement(i int) ITopStatementContext

	// IsSqlmeshFileContext differentiates from other interfaces.
	IsSqlmeshFileContext()
}

type SqlmeshFileContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySqlmeshFileContext() *SqlmeshFileContext {
	var p = new(SqlmeshFileContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_sqlmeshFile
	return p
}

func InitEmptySqlmeshFileContext(p *SqlmeshFileContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_sqlmeshFile
}

func (*SqlmeshFileContext) IsSqlmeshFileContext() {}

func NewSqlmeshFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SqlmeshFileContext {
	var p = new(SqlmeshFileContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLMeshRULE_sqlmeshFile

	return p
}

func (s *SqlmeshFileContext) GetParser() antlr.Parser { return s.parser }

func (s *SqlmeshFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(SQLMeshEOF, 0)
}

func (s *SqlmeshFileContext) AllTopStatement() []ITopStatementContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITopStatementContext); ok {
			len++
		}
	}

	tst := make([]ITopStatementContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITopStatementContext); ok {
			tst[i] = t.(ITopStatementContext)
			i++
		}
	}

	return tst
}

func (s *SqlmeshFileContext) TopStatement(i int) ITopStatementContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITopStatementContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITopStatementContext)
}

func (s *SqlmeshFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SqlmeshFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SqlmeshFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLMeshListener); ok {
		listenerT.EnterSqlmeshFile(s)
	}
}

func (s *SqlmeshFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLMeshListener); ok {
		listenerT.ExitSqlmeshFile(s)
	}
}

func (s *SqlmeshFileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLMeshVisitor:
		return t.VisitSqlmeshFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLMesh) SqlmeshFile() (localctx ISqlmeshFileContext) {
	localctx = NewSqlmeshFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SQLMeshRULE_sqlmeshFile)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == SQLMeshMODEL || _la == SQLMeshAUDIT {
		{
			p.SetState(36)
			p.TopStatement()
		}

		p.SetState(41)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(42)
		p.Match(SQLMeshEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITopStatementContext is an interface to support dynamic dispatch.
type ITopStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ModelDef() IModelDefContext
	AuditDef() IAuditDefContext

	// IsTopStatementContext differentiates from other interfaces.
	IsTopStatementContext()
}

type TopStatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopStatementContext() *TopStatementContext {
	var p = new(TopStatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_topStatement
	return p
}

func InitEmptyTopStatementContext(p *TopStatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_topStatement
}

func (*TopStatementContext) IsTopStatementContext() {}

func NewTopStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopStatementContext {
	var p = new(TopStatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLMeshRULE_topStatement

	return p
}

func (s *TopStatementContext) GetParser() antlr.Parser { return s.parser }

func (s *TopStatementContext) ModelDef() IModelDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModelDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModelDefContext)
}

func (s *TopStatementContext) AuditDef() IAuditDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAuditDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAuditDefContext)
}

func (s *TopStatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopStatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TopStatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLMeshListener); ok {
		listenerT.EnterTopStatement(s)
	}
}

func (s *TopStatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLMeshListener); ok {
		listenerT.ExitTopStatement(s)
	}
}

func (s *TopStatementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLMeshVisitor:
		return t.VisitTopStatement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLMesh) TopStatement() (localctx ITopStatementContext) {
	localctx = NewTopStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SQLMeshRULE_topStatement)
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case SQLMeshMODEL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(44)
			p.ModelDef()
		}

	case SQLMeshAUDIT:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(45)
			p.AuditDef()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModelDefContext is an interface to support dynamic dispatch.
type IModelDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	MODEL() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	RPAREN() antlr.TerminalNode
	SqlBody() ISqlBodyContext
	AllModelProp() []IModelPropContext
	ModelProp(i int) IModelPropContext
	AllCOMMA() []antlr.TerminalNode
	COMMA(i int) antlr.TerminalNode

	// IsModelDefContext differentiates from other interfaces.
	IsModelDefContext()
}

type ModelDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModelDefContext() *ModelDefContext {
	var p = new(ModelDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_modelDef
	return p
}

func InitEmptyModelDefContext(p *ModelDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_modelDef
}

func (*ModelDefContext) IsModelDefContext() {}

func NewModelDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModelDefContext {
	var p = new(ModelDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLMeshRULE_modelDef

	return p
}

func (s *ModelDefContext) GetParser() antlr.Parser { return s.parser }

func (s *ModelDefContext) MODEL() antlr.TerminalNode {
	return s.GetToken(SQLMeshMODEL, 0)
}

func (s *ModelDefContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(SQLMeshLPAREN, 0)
}

func (s *ModelDefContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(SQLMeshRPAREN, 0)
}

func (s *ModelDefContext) SqlBody() ISqlBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISqlBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISqlBodyContext)
}

func (s *ModelDefContext) AllModelProp() []IModelPropContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IModelPropContext); ok {
			len++
		}
	}

	tst := make([]IModelPropContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IModelPropContext); ok {
			tst[i] = t.(IModelPropContext)
			i++
		}
	}

	return tst
}

func (s *ModelDefContext) ModelProp(i int) IModelPropContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModelPropContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModelPropContext)
}

func (s *ModelDefContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(SQLMeshCOMMA)
}

func (s *ModelDefContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(SQLMeshCOMMA, i)
}

func (s *ModelDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModelDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModelDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLMeshListener); ok {
		listenerT.EnterModelDef(s)
	}
}

func (s *ModelDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SQLMeshListener); ok {
		listenerT.ExitModelDef(s)
	}
}

func (s *ModelDefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SQLMeshVisitor:
		return t.VisitModelDef(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SQLMesh) ModelDef() (localctx IModelDefContext) {
	localctx = NewModelDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SQLMeshRULE_modelDef)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(SQLMeshMODEL)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(SQLMeshLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(61)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&17592185913344) != 0 {
		{
			p.SetState(50)
			p.ModelProp()
		}
		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
		for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			if _alt == 1 {
				{
					p.SetState(51)
					p.Match(SQLMeshCOMMA)
					if p.HasError() {
						// Recognition error - abort rule
						goto errorExit
					}
				}
				{
					p.SetState(52)
					p.ModelProp()
				}

			}
			p.SetState(57)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 2, p.GetParserRuleContext())
			if p.HasError() {
				goto errorExit
			}
		}
		p.SetState(59)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		if _la == SQLMeshCOMMA {
			{
				p.SetState(58)
				p.Match(SQLMeshCOMMA)
				if p.HasError() {
					// Recognition error - abort rule
					goto errorExit
				}
			}

		}

	}
	{
		p.SetState(63)
		p.Match(SQLMeshRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(64)
		p.SqlBody()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModelPropContext is an interface to support dynamic dispatch.
type IModelPropContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
	// IsModelPropContext differentiates from other interfaces.
	IsModelPropContext()
}

type ModelPropContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModelPropContext() *ModelPropContext {
	var p = new(ModelPropContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_modelProp
	return p
}

func InitEmptyModelPropContext(p *ModelPropContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SQLMeshRULE_modelProp
}

func (*ModelPropContext) IsModelPropContext() {}

func NewModelPropContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModelPropContext {
	var p = new(ModelPropContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SQLMeshRULE_modelProp

	return p
}

func (s *ModelPropContext) GetParser() antlr.Parser { return s.parser }

func (s *ModelPropContext) CopyAll(ctx *ModelPropContext) {
	s.CopyFrom(&ctx.BaseParserRuleContext)
}

func (s *ModelPropContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModelPropContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type DisableRestatementPropContext struct {
	ModelPropContext
}

func NewDisableRestatementPropContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *DisableRestatementPropContext {
	var p = new(DisableRestatementPropContext)

	InitEmptyModelPropContext(&p.ModelPropContext)
	p.parser = parser
	p.CopyAll(ctx.(*ModelPropContext))

	return p
}

func (s *DisableRestatementPropContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DisableRestatementPropContext) PROP_DISABLE_RESTATEMENT() antlr.TerminalNode {
	return s.GetToken(SQLMeshPROP_DISABLE_RESTATEMENT, 0)
}

func (s *DisableRestatementPropContext) EQUALS() antlr.TerminalNode {
	return s.GetToken(SQLMeshEQUALS, 0)
}
